sensord (0.6.32) unstable; urgency=low

  [Lihan Guo]
  * Fixes: NB#199971 - proximity sensor never returns True
  * Added new tap feature, tap sensor offers single, double and single/double tap data.

  [Timo Rongas]
  * Fixes: NB#206204 - sensord prints debugs to console on startup

  [Antti Virtanen]
  * Loader now initializes plugins in reverse order so depenencies gets
    initialized first.
  * Moved context related sensor startup from main() to sensor plugin Init().
  * Replaced some magic number #define with static consts.
  * AvgVarFilter data is now protected with mutex.
  * Bin and RingBuffer refactoring.
  * magneticvariation GConf reading in DeclinationFilter fixed.
  * libsensordatatypes.so will now register all necessary metatypes during initialization.
  * Refactored makefiles and removed some unnecessary/deprecated definitions.
  * qt-api now hides internals behind pimpl. (Fixes: NB#198369).
  * Implemented buffering with few unit test cases.
  * Replaced old index based accessors for available dataranges and intervals
    with methods which query list of data with single dbus call.
  * Some const correctness fixes.
  * Changed some destructors to virtual which are used in inheritance.
  * Fixed memory leak from OrientationChain.
  * Removed SocketHandler::killSocket() hack. QObject::deleteLater() is used
    to clean up sockets.
  * Fixed crash and reliability issues from StandbyOverrideTest and PowerManagementTest. Fixes: NB#204003.
  * InputDevAdaptor now better handles cases when read() or lseek() fails for
    invalid input devices.
  * Typo fixed from --help output.
  * Commandline parser improved.
  * Removed pipe trick from sensormanager which was used to switch thread from
    adaptor thread to Qt eventloop thread.
  * SocketHandler now writes all data to socket with single write().
  * SocketHandler::SessionData is now thread-safe.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 11:54:31 +0200
